# content-publisher

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: environment.md
docs/prompts/: main.md  tiktok.md
shell/: install.dev.sh  install.sh  pre_run.sh  run.it.sh  run.sh  run.tests.sh
src/content_publisher/: __init__.py  main.py  requirements.in  requirements.txt
src/content_publisher/app/: app.py  config.py  content_publisher.py  credentials.py  media.py  paths.py  run_arg.py
src/content_publisher/app/google/: google_oauth.py  google_oauth_token_generator.py  youtube_content_publisher.py
src/content_publisher/app/meta/: facebook_content_publisher.py  facebook_oauth.py
src/content_publisher/app/oauth/: __init__.py  credentials.py  oauth.py  oauth_callback_handler.py  oauth_flow.py
src/content_publisher/app/reddit/: reddit_content_publisher.py
src/content_publisher/app/tiktok/: tiktok.py  tiktok_authenticator.py  tiktok_content_publisher.py  tiktok_oauth.py
src/content_publisher/app/x/: x_content_publisher.py
src/main/: __init__.py  content_publisher.py  main.py  requirements.in  requirements.txt
src/main/app/: app.py  config.py  content_publisher.py
src/main/app/google/: google_oauth_token_generator.py
src/test/app/: app_test.py  content_test.py  credentials_test.py
src/test/app/oauth/: credentials_it.py  credentials_test.py
